Fix portfolio card description color contrast, as reported by Axe Accessibility tests

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1143,7 +1143,7 @@ h6 {
 }
 
 .card__description {
-    color: #777;
+    color: #575757;
     font-size: 15px;
     line-height: 1.4;
 }
